fixed align issues due to fixed nav

--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -1,6 +1,11 @@
 // Place all the styles related to the Bookings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.new_booking {
+  margin-top: 20%;
+}
+
 .available_dates {
   margin: 0px;
   padding: 0px;
